# Kilimandjaro

./: .gitignore  README.md  config-skeleton.toml  pyproject.toml
src/kilimandjaro/: __init__.py  db.py  indexer.py  main.py  models.py  source.py  tui.py
