[project]
name = "kilimandjaro"
version = "0.2.0"
description = "Querying concepts"
authors = [{ name = "romaintailhurat", email = "romain.tailhurat@gmail.com" }]
dependencies = [
    "httpx>=0.27.2",
    "chromadb>=0.5.5",
    "textual>=0.81.0",
    "streamlit>=1.39.0",
    "fire>=0.7.0",
    "watchdog>=5.0.3",
    "polars>=1.31.0",
    "fastexcel>=0.14.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
webui = "streamlit run src/kilimandjaro/main.py"
indexer = "python src/kilimandjaro/indexer.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kilimandjaro"]

[tool.pyright]
venvPath = "."
venv = ".venv"
